RESOLVED FIXED65011
REGRESSION(r88757): The thumb of a vertical range slider is offset to the right on non-Mac
https://bugs.webkit.org/show_bug.cgi?id=65011
Summary REGRESSION(r88757): The thumb of a vertical range slider is offset to the rig...
Kent Tamura
Reported 2011-07-21 23:42:51 PDT
http://code.google.com/p/chromium/issues/detail?id=89616 This doesn't affect to platforms in which the sizes of horizontal thumb and vertical thumb are identical.
Attachments
Patch (16.93 KB, patch)
2011-07-22 00:05 PDT, Kent Tamura
no flags
Patch 2 (17.05 KB, patch)
2011-07-22 00:51 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-07-22 00:05:09 PDT
WebKit Review Bot
Comment 2 2011-07-22 00:43:05 PDT
Comment on attachment 101700 [details] Patch Attachment 101700 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9200993 New failing tests: media/video-volume-slider.html
Kent Tamura
Comment 3 2011-07-22 00:51:25 PDT
Created attachment 101703 [details] Patch 2 Update test_expectations.txt
WebKit Review Bot
Comment 4 2011-07-22 10:54:45 PDT
Comment on attachment 101703 [details] Patch 2 Clearing flags on attachment: 101703 Committed r91574: <http://trac.webkit.org/changeset/91574>
WebKit Review Bot
Comment 5 2011-07-22 10:54:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.